brokers/scorpio/scorpio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scorpio
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: federation-wildcard-tls-secret
spec:
  host: scorpio.federation.fiware.dev
  to:
    kind: Service
    name: scorpio
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
